# missingh

./: .appveyor.yml  .gitignore  .travis.yml  CHANGES.md  COPYING  COPYRIGHT  ChangeLog  ChangeLog-0.5.0  INSTALL  INSTALL-win.txt  LICENSE  Makefile  MissingH.cabal  README  STOP-HERE-YOU-HAVE-THE-WRONG-ARCHIVE  Setup.description  Setup.hs  Setup.lhs  TODO  cabal.haskell-ci  cabal.project  cpexample1.hs  ftptest.hs  mailprint.hs  missingh_1.1.0.1.orig.tar.gz.delta  missingh_1.1.0.1.orig.tar.gz.id  missingh_1.1.0.3.orig.tar.gz.delta  missingh_1.1.0.3.orig.tar.gz.id  missingh_1.1.0.orig.tar.gz.delta  missingh_1.1.0.orig.tar.gz.id  notes.txt  renameit.sh  tofix  tolgpl  winbuild.bat  winprep.bat  wintest.bat
.github/workflows/: ci-mac-win.yml  haskell-ci.yml
3rd-party-licenses/: BSD  LGPL-2.1
MissingH/: AnyDBM.hs  Bits.hs  Cmd.hs  ConfigParser.hs  Daemon.hs  Debian.hs  Either.hs  FiniteMap.hs  GetOpt.hs  HUnit.hs  IO.hs  IOutil.hs  List.hs  Listutil.hs  Logging.hs  MIMETypes.hs  Map.hs  Maybe.hs  Network.hs  Parsec.hs  Path.hs  Printf.hs  ProgressMeter.hs  ProgressTracker.hs  Quantity.hs  Size.hs  StatusBar.hs  Str.hs  Strutil.hs  Threads.hs  Time.hs
MissingH/AnyDBM/: FiniteMapDBM.hs  MapDBM.hs  StringDBM.hs
MissingH/Checksum/: MD5.lhs
MissingH/Checksum/CRC32/: GZip.hs  Posix.hs
MissingH/Checksum/MD5/: Zord64_EASY.hs  Zord64_HARD.lhs
MissingH/Compression/: Inflate.hs
MissingH/ConfigParser/: Lexer.hs  Parser.hs  Types.hs
MissingH/Debian/: ControlParser.hs
MissingH/Email/: Mailbox.hs  Parser.hs  Sendmail.hs
MissingH/Email/Mailbox/: Maildir.hs
MissingH/FileArchive/: GZip.hs  Tar.hs
MissingH/FileArchive/Tar/: HeaderParser.hs
MissingH/Hsemail/: Rfc2234.hs  Rfc2821.hs  Rfc2822.hs
MissingH/IO/: Binary.hs  BlockIO.hs  HVFS.hs  HVIO.hs  PlafCompat.hs  PosixConsts.hs  StatCompat.hs  WindowsCompat.hs
MissingH/IO/HVFS/: Combinators.hs  InstanceHelpers.hs  Utils.hs
MissingH/Logging/: Handler.hs  Logger.hs
MissingH/Logging/Handler/: Simple.hs  Syslog.hs
MissingH/Network/: SocketServer.hs
MissingH/Network/FTP/: Client.hs  ParserClient.hs  ParserServer.hs  Server.hs
MissingH/Path/: FilePath.hs  Glob.hs  NameManip.hs  WildMatch.hs
MissingH/Printf/: Printer.hs  Types.hs
MissingH/Str/: CSV.hs
MissingH/Threads/: Child.hs  Timeout.hs
MissingH/Time/: ParseDate.hs
MissingH/Wash/Mail/: MIME.hs  MailParser.hs  Message.hs
MissingH/Wash/Utility/: Base64.hs  Hex.hs  ISO8601.hs  IntToString.hs  JavaScript.hs  LICENSE  Locking.hs  QuotedPrintable.hs  RFC2047.hs  RFC2397.hs  SimpleParser.hs  URLCoding.hs
announcements/: 0.10.0.txt  0.8.0.txt  0.9.0.txt
debian/: README.Debian  changelog  conffiles.ex  control  copyright  cron.d.ex  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  libghc6-missingh-dev.postinst  libghc6-missingh-dev.postinst.debhelper  libghc6-missingh-dev.postinst.tmpl  libghc6-missingh-dev.prerm.debhelper  libghc6-missingh-dev.prerm.tmpl  libghc6-missingh-prerm  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  missingh-default.ex  missingh-doc.docs  missingh.doc-base.EX  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local.ex  watch.ex
doc/: Makefile  pescofmt.fmt
examples/: simplegrep.hs  test2.hs  test3.hs
libsrc/MissingH/: AnyDBM.hs  Bits.hs  Cmd.hs  ConfigParser.hs  Either.hs  FiniteMap.hs  HVIO.hs  IO.hs  List.hs  Logging.hs  MIMETypes.hs  Network.hs  Parsec.hs  Path.hs  Printf.hs  Str.hs  Strutil.hs  Threads.hs  Time.hs  Varargs.hs
libsrc/MissingH/AnyDBM/: StringDBM.hs
libsrc/MissingH/Checksum/: CRC32.hs
libsrc/MissingH/Compression/: Inflate.hs
libsrc/MissingH/ConfigParser/: Lexer.hs  Parser.hs  RunParser.hs  Types.hs
libsrc/MissingH/Email/: MailParser.hs  Parser.hs  Sendmail.hs
libsrc/MissingH/FileArchive/: GZip.hs
libsrc/MissingH/Hsemail/: README  Rfc2234.hs  Rfc2821.hs  Rfc2822.hs
libsrc/MissingH/IO/: Binary.hs  BlockIO.hs  HVFS.hs  HVIO.hs
libsrc/MissingH/Logging/: Default.hs  Handler.hs  Logger.hs
libsrc/MissingH/Network/: Gopher.hs  SocketServer.hs
libsrc/MissingH/Path/: NameManip.hs
libsrc/MissingH/Printf/: Parser.lhs  Printer.hs  Printer.lhs  Types.hs  Types.lhs
libsrc/MissingH/Regex/: Pesco.lhs
libsrc/MissingH/WASHMail/: Email.hs  HeaderField.hs  MailParser.hs
pending/: Gopher.hs  Maildir.disabled  Tar.newhs
src/Data/: BinPacking.hs  CSV.hs  ConfigFile.hs  MissingHString.hs  Quantity.hs  String.hs  TSV.hs
src/Data/Bits/: Utils.hs
src/Data/Codec/: Base32.hs  Base64.hs
src/Data/Compression/: Inflate.hs
src/Data/ConfigFile/: Lexer.hs  Parser.hs  Types.hs
src/Data/Either/: Utils.hs
src/Data/Hash/: MD5.hs  MD5.lhs
src/Data/List/: Utils.hs
src/Data/MIME/: Types.hs
src/Data/Map/: Utils.hs
src/Data/Maybe/: Utils.hs
src/Data/Progress/: Meter.hs  Tracker.hs
src/Data/SeperatingValues/: SeperatingValues.hs
src/Data/Sequence/: Utils.hs
src/Data/String/: Utils.hs
src/Data/Tuple/: Utils.hs
src/Database/: AnyDBM.hs
src/Database/AnyDBM/: MapDBM.hs  StringDBM.hs
src/Language/RFC2234/: Parse.hs
src/Language/RFC2821/: Parse.hs
src/Language/RFC2822/: Parse.hs
src/Network/: SocketServer.hs  Utils.hs
src/Network/Email/: Mailbox.hs  Message.hs  Parser.hs  Sendmail.hs
src/Network/FTP/: Client.hs  Server.hs
src/System/: Daemon.hs  Debian.hs  IO.hs  Log.hs  Path.hs
src/System/Cmd/: Utils.hs
src/System/Debian/: ControlParser.hs
src/System/FileArchive/: GZip.hs
src/System/IO/: Binary.hs  BlockIO.hs  HVFS.hs  HVIO.hs  Locking.hs  PlafCompat.hs  StatCompat.hs  Utils.hs  WindowsCompat.hs
testsrc/: AnyDBMtest.hs  Bitstest.hs  CRC32GZIPtest.hs  CRC32POSIXtest.hs  CRC32test.hs  Cmdtest.hs  Eithertest.hs  FiniteMaptest.hs  GZiptest.hs  Globtest.hs  HVFStest.hs  HVIOtest.hs  IOtest.hs  Listtest.hs  MIMETypestest.hs  Maptest.hs  Pathtest.hs  Printftest.hs  ProgressTrackertest.hs  Sequencetest.hs  Strtest.hs  TestUtils.hs  Tests.hs  Testutil.hs  Timetest.hs  WildMatchtest.hs  mime.types.test  runtests.hs
testsrc/ConfigParser/: Maintest.hs  Parsertest.hs  RunParsertest.hs  test.cfg
testsrc/Str/: CSVtest.hs  TSVtest.hs
(+83 files in other folders)
