Name: MissingH
Version: 1.1.0
License: GPL
Maintainer: John Goerzen <jgoerzen@complete.org>
Author: John Goerzen
Copyright: Copyright (c) 2004-2009 John Goerzen
license-file: COPYRIGHT
extra-source-files: COPYING,
                    testsrc/gzfiles/empty.gz,
                    testsrc/gzfiles/t1.gz,
                    testsrc/gzfiles/t1bad.gz,
                    testsrc/gzfiles/t2.gz,
                    testsrc/gzfiles/zeros.gz,
                    testsrc/mime.types.test
homepage: http://software.complete.org/missingh
Category: Unclassified
synopsis: Large utility library
Description:  MissingH is a library of all sorts of utility functions for
 Haskell programmers.  It is written in pure Haskell and thus should
 be extremely portable and easy to use.
Stability: Beta
Build-Type: Simple
Cabal-Version: >=1.2.3

Flag splitBase
  description: Choose the new smaller, split-up base package.

Library
 Hs-Source-Dirs: src
 Exposed-Modules:
  Data.String.Utils, System.IO.Utils, System.IO.Binary, Data.List.Utils,
  System.Daemon,
  Text.ParserCombinators.Parsec.Utils,
  Network.Email.Mailbox,
  Control.Concurrent.Thread.Utils,
  Network.Email.Sendmail,
    Data.CSV,
  System.Cmd.Utils,
  Data.BinPacking,
  Data.Progress.Tracker,
  Data.Progress.Meter,
  Data.Quantity,
  Data.Map.Utils, System.Path, System.Path.NameManip,
    System.Path.WildMatch, System.Path.Glob,
  System.Time.Utils, System.Time.ParseDate,
  Network.Utils,
  Network.SocketServer,
  Data.Either.Utils,
  Data.Maybe.Utils,
  Data.Tuple.Utils,
  Data.Bits.Utils,
  Data.Hash.CRC32.Posix, Data.Hash.CRC32.GZip,
   Data.Hash.MD5, Data.Hash.MD5.Zord64_HARD,
  Data.Compression.Inflate,
  System.FileArchive.GZip,
  System.IO.HVFS,
    System.IO.HVFS.Combinators,
    System.IO.HVFS.InstanceHelpers,
    System.IO.HVFS.Utils,
  System.IO.HVIO, System.IO.StatCompat, System.IO.WindowsCompat,
    System.IO.PlafCompat, System.Posix.Consts,
  System.Debian, System.Debian.ControlParser,
  Data.MIME.Types,
  System.Console.GetOpt.Utils

 Extensions: ExistentialQuantification, OverlappingInstances,
   UndecidableInstances, CPP, Rank2Types,
   MultiParamTypeClasses, FlexibleInstances, FlexibleContexts,
   PatternSignatures

 Build-Depends: network, parsec, base,
               haskell98, mtl, HUnit, regex-compat,
               QuickCheck >= 1.0 && < 2.0,
               filepath,
               hslogger
 If flag(splitBase)
   Build-Depends: base >= 4, base <= 5, directory, random, process, old-time,
                             containers, old-locale, array
 Else
   Build-Depends: base < 3
 If ! os(windows)
   Build-Depends: unix

Executable runtests
  Buildable: False
  Main-Is: runtests.hs
  HS-Source-Dirs: testsrc, .
  Build-Depends: testpack, QuickCheck >= 1.0 && <2.0, HUnit
  Extensions: ExistentialQuantification, OverlappingInstances,
    UndecidableInstances, CPP, PatternSignatures
