Name: MissingH
Version: 1.1.1.0
License: BSD3
Maintainer: John Goerzen <jgoerzen@complete.org>
Author: John Goerzen
Copyright: Copyright (c) 2004-2011 John Goerzen
license-file: LICENSE
extra-source-files: LICENSE,
                    announcements/0.10.0.txt,
                    announcements/0.8.0.txt,
                    announcements/0.9.0.txt,
                    testsrc/gzfiles/empty.gz,
                    testsrc/gzfiles/t1.gz,
                    testsrc/gzfiles/t1bad.gz,
                    testsrc/gzfiles/t2.gz,
                    testsrc/gzfiles/zeros.gz,
                    testsrc/mime.types.test,
                    3rd-party-licenses/BSD,
                    3rd-party-licenses/LGPL-2.1,
                    Makefile,
                    TODO,
                    examples/simplegrep.hs,
                    examples/test2.hs,
                    examples/test3.hs,
                    pending/Gopher.hs,
                    pending/Maildir.disabled,
                    pending/Tar.newhs,
                    pending/Tar/HeaderParser.newhs,
                    tolgpl,
                    winbuild.bat,
                    wintest.bat
homepage: http://software.complete.org/missingh
Category: Unclassified
synopsis: Large utility library
Description:  MissingH is a library of all sorts of utility functions for
 Haskell programmers.  It is written in pure Haskell and thus should
 be extremely portable and easy to use.
Stability: Beta
Build-Type: Simple
Cabal-Version: >=1.2.3

Flag splitBase
  description: Choose the new smaller, split-up base package.
Flag buildtests
  description: Build the executable to run unit tests
  default: False

Library
 Hs-Source-Dirs: src
 Exposed-Modules:
  Data.String.Utils, System.IO.Utils, System.IO.Binary, Data.List.Utils,
  System.Daemon,
  Text.ParserCombinators.Parsec.Utils,
  Network.Email.Mailbox,
  Control.Concurrent.Thread.Utils,
  Network.Email.Sendmail,
    Data.CSV,
  System.Cmd.Utils,
  Data.BinPacking,
  Data.Progress.Tracker,
  Data.Progress.Meter,
  Data.Quantity,
  Data.Map.Utils, System.Path, System.Path.NameManip,
    System.Path.WildMatch, System.Path.Glob,
  System.Time.Utils, System.Time.ParseDate,
  Network.Utils,
  Network.SocketServer,
  Data.Either.Utils,
  Data.Maybe.Utils,
  Data.Tuple.Utils,
  Data.Bits.Utils,
  Data.Hash.CRC32.Posix, Data.Hash.CRC32.GZip,
   Data.Hash.MD5, Data.Hash.MD5.Zord64_HARD,
  Data.Compression.Inflate,
  System.FileArchive.GZip,
  System.IO.HVFS,
    System.IO.HVFS.Combinators,
    System.IO.HVFS.InstanceHelpers,
    System.IO.HVFS.Utils,
  System.IO.HVIO, System.IO.StatCompat, System.IO.WindowsCompat,
    System.IO.PlafCompat, System.Posix.Consts,
  System.Debian, System.Debian.ControlParser,
  Data.MIME.Types,
  System.Console.GetOpt.Utils

 Extensions: ExistentialQuantification, OverlappingInstances,
   UndecidableInstances, CPP, Rank2Types,
   MultiParamTypeClasses, FlexibleInstances, FlexibleContexts,
   ScopedTypeVariables

 Build-Depends: network, parsec, base,
               mtl, HUnit, regex-compat,
               filepath,
               hslogger
 If flag(splitBase)
   Build-Depends: base >= 4, base < 5, directory, random, process, old-time,
                             containers, old-locale, array
 Else
   Build-Depends: base < 3
 If ! os(windows)
   Build-Depends: unix

Executable runtests
  if flag(buildtests)
    Buildable: True
    Build-Depends: testpack, QuickCheck >= 1.0 && <2.0, HUnit
  else
    Buildable: False
  Main-Is: runtests.hs
  HS-Source-Dirs: testsrc, ., src
  Other-Modules: Bitstest,
    CRC32GZIPtest,
    CRC32POSIXtest,
    Eithertest,
    GZiptest,
    Globtest,
    HVFStest,
    HVIOtest,
    IOtest,
    Listtest,
    MIMETypestest,
    Maptest,
    Pathtest,
    ProgressTrackertest,
    Str.CSVtest,
    Strtest,
    Tests,
    Timetest,
    WildMatchtest
  Extensions: ExistentialQuantification, OverlappingInstances,
    UndecidableInstances, CPP, Rank2Types,
    MultiParamTypeClasses, FlexibleInstances, FlexibleContexts,
    ScopedTypeVariables
